--- a/java-project/src/main/webapp/index.html
+++ b/java-project/src/main/webapp/index.html
@@ -7,9 +7,9 @@
 <body>
 <h1>자바100기 예제 사이트</h1>
 <p>자바 100기 예제 사이트에 오신 걸 환영합니다!</p>
-<a href="http://localhost:9999/java-project/score/list.jsp" title="성적 목록">성적 목록</a>
-<a href="http://localhost:9999/java-project/member/list.jsp" title="회원 목록">회원 목록</a>
-<a href="http://localhost:9999/java-project/board/list.jsp" title="게시물 목록 ">게시물 목록</a>
-<a href="http://localhost:9999/java-project/room/list.jsp" title="강의실 목록">강의실 목록</a>
+<a href="http://localhost:9999/java-project/score/list.do" title="성적 목록">성적 목록</a>
+<a href="http://localhost:9999/java-project/member/list.do" title="회원 목록">회원 목록</a>
+<a href="http://localhost:9999/java-project/board/list.do" title="게시물 목록 ">게시물 목록</a>
+<a href="http://localhost:9999/java-project/room/list.do" title="강의실 목록">강의실 목록</a>
 </body>
 </html>
